add: classes with alignment options for cols and text

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -69,13 +69,17 @@
             </div>
         </div>
     </nav>
-    <main id="main-doc" class="pa0 container" role="main">
+    <main id="main-doc" class="pa0" role="main">
         <section class="main-section pa8" id="welcome-section">
+
             <header>
                 <H1>Ítalo Polazzi a Web Develover</H1>
                 <h2>Welcome</h2>
             </header>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa possimus ea hic ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque amet.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa possimus ea hic
+                ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque amet.</p>
+
+
         </section>
         <section class="main-section pa8" id="projects">
             <header>
