add: background to welcome-section and changes the secondary color

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -70,14 +70,21 @@
         </div>
     </nav>
     <main id="main-doc" class="pa0" role="main">
-        <section class="main-section pa8" id="welcome-section">
+        <section class="main-section pa8 color-primary" id="welcome-section">
+            <div class="row color-inverted">
+                <div class="col-xs12 col-sm8 col-md5 pa8">
+                    <header>
+                        <h1>Ítalo Polazzi a Web Develover</h1>
+                        <h2>Welcome</h2>
+                    </header>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa possimus ea
+                        hic
+                        ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque amet.
+                    </p>
 
-            <header>
-                <H1>Ítalo Polazzi a Web Develover</H1>
-                <h2>Welcome</h2>
-            </header>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa possimus ea hic
-                ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque amet.</p>
+                </div>
+
+            </div>
 
 
         </section>
@@ -240,7 +247,7 @@
 
     <footer id="footer" class="accent">&copy; Ítalo Polazzi - 2019</footer>
     <script src="js/index.js" type="module"></script>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
