--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -28,7 +28,7 @@
                 id="logo" class="color-inverted">
                 <style type="text/css">
                     svg#logo {
-                        width: 6em;
+                        width: 8em;
                     }
 
                     .st0 {
@@ -338,7 +338,7 @@
                     </a>
                 </li>
 
-                <li><a tabindex="0" href="https://www.behance.com/itpzzi" class="primary color-inverted"
+                <li><a tabindex="0" href="https://www.behance.net/itpzzi3100" class="primary color-inverted"
                         title="Behance portfolio" target="_blank" id="profile-link">
                         <div class="icon"><i class="mdi mdi-behance"></i></div><span>Behance</span>
                     </a>
@@ -397,8 +397,9 @@
             <!-- <section class="my8 project-types" id="project-web">
                 <h3>Web</h3>
                 <hr>
-                <div class="my4 project-gallery">
-                    <div class="project-tile">
+                <section class="my4 project-gallery">
+                   
+                    <article class="project-tile">
                         <a href="../technicalDocumentationPage/index.html">
                             <iframe src="../technicalDocumentationPage/index.html"></iframe>
                             <div class="project-tile-footer color-secondary">
@@ -412,9 +413,9 @@
                                     doloribus?</p>
                             </div>
                         </a>
-                    </div>
+                    </article>
 
-                    <div class="project-tile">
+                    <article class="project-tile">
                         <a href="../tributePage/index.html">
                             <iframe tabindex="-1" src="../tributePage/index.html"></iframe>
                             <div class="project-tile-footer color-accent">
@@ -426,9 +427,9 @@
                                     doloribus?</p>
                             </div>
                         </a>
-                    </div>
+                    </article>
 
-                    <div class="project-tile">
+                    <article class="project-tile">
                         <a href="./index.html">
                             <iframe src="./index.html"></iframe>
                             <div class="project-tile-footer color-primary">
@@ -442,64 +443,90 @@
                                     doloribus?</p>
                             </div>
                         </a>
-                    </div>
-                </div>
+                    </article>
+                </section>
             </section> -->
 
             <section class="my8 project-types" id="project-design">
                 <h3>Design</h3>
                 <hr>
-                <div class="my4 project-gallery">
+                <section class="my4 project-gallery">
 
-                    <div class="project-tile secondary">
+                    <article class="project-tile secondary">
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
-                            <div class="project-tile-footer color-secondary">
-                                <h4 class="project-title color-inverted">Technical Documentation</h4>
-                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Placeat
-                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                    architecto asperiores
-                                    provident mollitia ratione magnam, ex nostrum incidunt eius
-                                    assumenda, placeat
-                                    doloribus?</p>
-                            </div>
                         </a>
-                    </div>
+                        <input role="button" type="checkbox" class="project-actions accent color-inverted"
+                            aria-label="Read more of Technical Documentation"><i class="mdi mdi-plus"></i></input>
+                        <a class="project-actions accent color-inverted" href="./img/projects/gab.png">
+                            <i class="mdi mdi-read"></i>
+                        </a>
+                        <div class="project-tile-footer color-secondary">
+                            <header class="project-title">
+                                <h4 class="project-title color-inverted">Technical Documentation
+                                </h4>
+                            </header>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?</p>
+                        </div>
+                    </article>
 
-                    <div class="project-tile accent">
+                    <article class="project-tile accent">
                         <a href="./img/projects/office_v2.png">
                             <img src="./img/projects/office_v2.png"></img>
-                            <div class="project-tile-footer color-accent">
-                                <h4 class="project-title color-inverted">Technical Documentation</h4>
-                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Placeat
-                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                    architecto asperiores
-                                    provident mollitia ratione magnam, ex nostrum incidunt eius
-                                    assumenda, placeat
-                                    doloribus?</p>
-                            </div>
                         </a>
-                    </div>
+                        <input role="button" type="checkbox" class="project-actions accent color-inverted"
+                            aria-label="Read more of Tribute Page"><i class="mdi mdi-plus"></i></input>
+                        <a class="project-actions accent color-inverted" href="./img/projects/office_v2.png">
+                            <i class="mdi mdi-read"></i>
+                        </a>condary">
+                        <div class="project-tile-footer color-accent">
+                            <header class="project-title">
+                                <h4 class="project-title color-inverted">Tribute Page</h4>
+                            </header>
 
-                    <div class="project-tile primary">
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?</p>
+                        </div>
+                    </article>
+
+                    <article class="project-tile primary">
                         <a href="./img/projects/office_v3.png">
                             <img src="./img/projects/office_v3.png"></img>
-                            <div class="project-tile-footer color-primary">
-                                <h4 class="project-title color-inverted">Technical Documentation</h4>
-                                <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Placeat
-                                    aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                    architecto asperiores
-                                    provident mollitia ratione magnam, ex nostrum incidunt eius
-                                    assumenda, placeat
-                                    doloribus?</p>
-                            </div>
                         </a>
-                    </div>
+                        <input role="button" type="checkbox" class="project-actions accent color-inverted"
+                            aria-label="Read more of A Technical Documentation page using responsive design">
 
-                </div>
+                        <i> class="mdi mdi-plus"></i></input>
+                        <a class="project-actions accent color-inverted" href="./img/projects/office_v3.png">
+                            <i class="mdi mdi-read"></i>
+                        </a>
+                        <div class="project-tile-footer color-primary">
+                            <header class="project-title">
+                                <h4 class="project-title color-inverted">A Technical Documentation page using responsive
+                                    design</h4>
+                            </header>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?</p>
+                        </div>
+                    </article>
+
+                </section>
             </section>
 
         </section>
@@ -532,7 +559,7 @@
 
     <footer id="footer" class="accent">&copy; Ítalo Polazzi - 2019</footer>
     <script src="js/index.js" type="module"></script>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <!-- <script src="https://cdn.freecodecamp.org/<i class="mdi mdi-read">able-projects-fcc/v1/bundle.js"></script> --></i>
 </body>
 
 </html>
