fix: navbar opener and adds specifics tiles' files

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -456,7 +456,7 @@
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
                         </a>
-                        <input role="button" type="checkbox" class="project-actions accent color-inverted"
+                        <input role="button" type="checkbox" class="mdi mdi-plus color-main project-actions accent color-inverted"
                             aria-label="Read more of Technical Documentation"><i class="mdi mdi-plus"></i></input>
                         <a class="project-actions accent color-inverted" href="./img/projects/gab.png">
                             <i class="mdi mdi-read"></i>
@@ -504,10 +504,10 @@
                         <a href="./img/projects/office_v3.png">
                             <img src="./img/projects/office_v3.png"></img>
                         </a>
-                        <input role="button" type="checkbox" class="project-actions accent color-inverted"
+                        <input role="button" type="checkbox" class="mdi mdi-plus project-actions accent color-inverted"
                             aria-label="Read more of A Technical Documentation page using responsive design">
 
-                        <i> class="mdi mdi-plus"></i></input>
+                        <i class="mdi mdi-plus"></i></input>
                         <a class="project-actions accent color-inverted" href="./img/projects/office_v3.png">
                             <i class="mdi mdi-read"></i>
                         </a>
