--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -456,12 +456,12 @@
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
                         </a>
-                        <input role="button" type="checkbox" class="mdi mdi-plus color-main project-actions accent color-inverted"
-                            aria-label="Read more of Technical Documentation"><i class="mdi mdi-plus"></i></input>
-                        <a class="project-actions accent color-inverted" href="./img/projects/gab.png">
-                            <i class="mdi mdi-read"></i>
-                        </a>
-                        <div class="project-tile-footer color-secondary">
+                        <div class="project-tile-actions">
+                            <a data-activator="1" class="mdi mdi-chevron-up"></a>
+                            <a class="mdi mdi-plus" href="img/projects/gab.png"></a>
+                        </div>
+
+                        <div data-object="1" class="project-tile-footer color-secondary">
                             <header class="project-title">
                                 <h4 class="project-title color-inverted">Technical Documentation
                                 </h4>
@@ -476,45 +476,19 @@
                         </div>
                     </article>
 
-                    <article class="project-tile accent">
-                        <a href="./img/projects/office_v2.png">
-                            <img src="./img/projects/office_v2.png"></img>
+                    <article class="project-tile secondary">
+                        <a href="./img/projects/gab.png">
+                            <img src="./img/projects/gab.png"></img>
                         </a>
-                        <input role="button" type="checkbox" class="project-actions accent color-inverted"
-                            aria-label="Read more of Tribute Page"><i class="mdi mdi-plus"></i></input>
-                        <a class="project-actions accent color-inverted" href="./img/projects/office_v2.png">
-                            <i class="mdi mdi-read"></i>
-                        </a>condary">
-                        <div class="project-tile-footer color-accent">
-                            <header class="project-title">
-                                <h4 class="project-title color-inverted">Tribute Page</h4>
-                            </header>
-
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?</p>
+                        <div class="project-tile-actions">
+                            <a data-activator="2" class="mdi mdi-chevron-up"></a>
+                            <a class="mdi mdi-plus" href="img/projects/gab.png"></a>
                         </div>
-                    </article>
 
-                    <article class="project-tile primary">
-                        <a href="./img/projects/office_v3.png">
-                            <img src="./img/projects/office_v3.png"></img>
-                        </a>
-                        <input role="button" type="checkbox" class="mdi mdi-plus project-actions accent color-inverted"
-                            aria-label="Read more of A Technical Documentation page using responsive design">
-
-                        <i class="mdi mdi-plus"></i></input>
-                        <a class="project-actions accent color-inverted" href="./img/projects/office_v3.png">
-                            <i class="mdi mdi-read"></i>
-                        </a>
-                        <div class="project-tile-footer color-primary">
+                        <div data-object="2" class="project-tile-footer color-secondary">
                             <header class="project-title">
-                                <h4 class="project-title color-inverted">A Technical Documentation page using responsive
-                                    design</h4>
+                                <h4 class="project-title color-inverted">Technical Documentation
+                                </h4>
                             </header>
                             <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Placeat
