add: tile-actions animations

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -457,8 +457,10 @@
                             <img src="./img/projects/gab.png"></img>
                         </a>
                         <div class="project-tile-actions">
-                            <a data-activator="1" class="mdi mdi-chevron-up"></a>
-                            <a class="mdi mdi-plus" href="img/projects/gab.png"></a>
+                            <a data-activator="1"
+                                class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                            <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                href="img/projects/gab.png"></a>
                         </div>
 
                         <div data-object="1" class="project-tile-footer color-secondary">
@@ -481,8 +483,8 @@
                             <img src="./img/projects/gab.png"></img>
                         </a>
                         <div class="project-tile-actions">
-                            <a data-activator="2" class="mdi mdi-chevron-up"></a>
-                            <a class="mdi mdi-plus" href="img/projects/gab.png"></a>
+                            <a data-activator="2" class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                            <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus" href="img/projects/gab.png"></a>
                         </div>
 
                         <div data-object="2" class="project-tile-footer color-secondary">
