add: styles for tiles

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -452,14 +452,14 @@
                 <hr>
                 <section class="my4 project-gallery">
 
-                    <article class="project-tile secondary">
+                    <article class="project-tile color-secondary rounded shadow">
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
                         </a>
                         <div class="project-tile-actions">
                             <a data-activator="1"
-                                class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                            <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                class="tile-action tile-action-expand primary color-inverted mdi mdi-chevron-up"></a>
+                            <a class="tile-action tile-action-open primary color-inverted mdi mdi-plus"
                                 href="img/projects/gab.png"></a>
                         </div>
 
@@ -478,16 +478,40 @@
                         </div>
                     </article>
 
-                    <article class="project-tile secondary">
+                    <article class="project-tile color-accent rounded">
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
                         </a>
                         <div class="project-tile-actions">
-                            <a data-activator="2" class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                            <a data-activator="2" class="tile-action tile-action-expand secondary color-inverted mdi mdi-chevron-up"></a>
+                            <a class="tile-action tile-action-open secondary color-inverted mdi mdi-plus" href="img/projects/gab.png"></a>
+                        </div>
+
+                        <div data-object="2" class="project-tile-footer">
+                            <header class="project-title">
+                                <h4 class="project-title color-inverted">Technical Documentation
+                                </h4>
+                            </header>
+                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?</p>
+                        </div>
+                    </article>
+
+                    <article class="project-tile color-primary minimalist">
+                        <a href="./img/projects/gab.png">
+                            <img src="./img/projects/gab.png"></img>
+                        </a>
+                        <div class="project-tile-actions">
+                            <a data-activator="3" class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
                             <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus" href="img/projects/gab.png"></a>
                         </div>
 
-                        <div data-object="2" class="project-tile-footer color-secondary">
+                        <div data-object="3" class="project-tile-footer">
                             <header class="project-title">
                                 <h4 class="project-title color-inverted">Technical Documentation
                                 </h4>
