add: img project-tile cover

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -452,7 +452,7 @@
                 <hr>
                 <section class="my4 project-gallery">
 
-                    <article class="project-tile color-secondary rounded shadow">
+                    <article class="project-tile color-secondary secondary rounded shadow">
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
                         </a>
@@ -463,7 +463,7 @@
                                 href="img/projects/gab.png"></a>
                         </div>
 
-                        <div data-object="1" class="project-tile-footer color-secondary">
+                        <div data-object="1" class="project-tile-footer">
                             <header class="project-title">
                                 <h4 class="project-title color-inverted">Technical Documentation
                                 </h4>
@@ -478,9 +478,9 @@
                         </div>
                     </article>
 
-                    <article class="project-tile color-accent rounded">
-                        <a href="./img/projects/gab.png">
-                            <img src="./img/projects/gab.png"></img>
+                    <article class="project-tile color-accent accent rounded">
+                        <a href="./img/projects/office_v2.png">
+                            <img src="./img/projects/office_v2.png"></img>
                         </a>
                         <div class="project-tile-actions">
                             <a data-activator="2" class="tile-action tile-action-expand secondary color-inverted mdi mdi-chevron-up"></a>
@@ -498,13 +498,31 @@
                                 architecto asperiores
                                 provident mollitia ratione magnam, ex nostrum incidunt eius
                                 assumenda, placeat
+                                doloribus?Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
+                                doloribus?Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Placeat
+                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                                architecto asperiores
+                                provident mollitia ratione magnam, ex nostrum incidunt eius
+                                assumenda, placeat
                                 doloribus?</p>
                         </div>
                     </article>
 
-                    <article class="project-tile color-primary minimalist">
-                        <a href="./img/projects/gab.png">
-                            <img src="./img/projects/gab.png"></img>
+                    <article class="project-tile color-primary primary minimalist">
+                        <a href="./img/projects/office_v3.png">
+                            <img src="./img/projects/office_v3.png"></img>
                         </a>
                         <div class="project-tile-actions">
                             <a data-activator="3" class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
